# PulseMon

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  agent.md  erreur.txt  makepkg-tmp.sh  pulsemon-api.conf  pulsemon-api.install  pulsemon-api.service  pulsemon-api.sh
Docs/: plan_implementation_api_stats_linux.md  rapport_stabilisation_courbe_gpu_2026-03-24.md  rapport_technique_gpu_cpu_2026-03-24.md
api/: README.md  pytest.ini  requirements.txt
api/app/: config.py  main.py  ui.py
api/config/: fans_mapping.json
api/diagnostics/: raw_metrics_20260324.jsonl  raw_vs_display_gpu_pct_20260324_2.jsonl  raw_vs_display_gpu_pct_20260324_3.jsonl
api/docs/: API_CONTRACT_V1.md  API_FANS_CONTRACT_V1.md  (+1 more)
diagnostics/: raw_vs_display_gpu_pct_20260327.jsonl
docs/: README.md  prompt_codex_correction_graphes_geom_labels_v_1.md
esp/: .gitignore  DOCUMENTATION.md  README.md  agent.md  agents.md  platformio.ini
esp/src/: CMakeLists.txt  actions.c  bmp_writer.c  bmp_writer.h  capture_config.h  lcd_capture.c  lcd_capture.h  lv_port.c  main.c  pulsemon_api_client.c  pulsemon_api_client.h  pulsemon_api_config.h  pulsemon_poller.c  pulsemon_poller.h  sd_storage.c  sd_storage.h  ui_backend.h  ui_graphs.c  ui_graphs.h  ui_screen.c  ui_screen.h  vars.c  vars.h  wifi_config.h
esp/src/lvgl/: lvgl.h
esp/src/ui/: .eez-project-build  actions.h  fonts.h  screens.c  screens.h  styles.c  styles.h  vars.h
esp/src/ui/fonts/: ui_font_font_18.c
tmp/: backend_capture_gpu_v1.json  cahier_des_charges_monitoring_gpu_amd.md  jc_3248_w_535_en_gesture_navigation_guide.md
(+72 files in other folders)
